# graves-handwriting-mlx

./: .gitignore  README.md  main.py  pyproject.toml
graves_handwriting_mlx/: __init__.py  draw.py  generator.py  hand.py  model.py  stream.py  weights.py
longhand_mlx/: alphabet.py  draw.py  hand.py  modules.py  weights.py
scripts/: colored_fragments.py  convert_checkpoint.py  dataset_handwrite.py  fragment_demo.py
