[project]
name = "longhand-mlx"
version = "0.1.0"
description = "Graves-style handwriting synthesis on Apple MLX."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlx>=0.31.2",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "svgwrite>=1.4.3",
]

[dependency-groups]
dev = [
    "tensorflow>=2.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["longhand_mlx"]

[tool.hatch.build.targets.wheel.force-include]
"longhand_mlx/data" = "longhand_mlx/data"
